# PCPC

backend/: Cargo.toml
backend/database.db/: IDENTITY  LOG  LOG.old.1679312177461638
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  traits.rs  types.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  auth.rs  comparison.rs  connection.rs  content.rs  create.rs  favorites.rs  filter.rs  header.rs  home.rs  icons.rs  lib.rs  main.rs  partpage.rs  parts.rs  rating.rs  side_panel.rs
