[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"
env_logger = "0.10.0"
mime = "0.3.16"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
surrealdb = "1.0.0-beta.8"
log = "0.4.17"
common = { path = "../common", features = [ "surreal" ] }
bytes = "1"
