[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [ "HtmlElement", "CssStyleDeclaration", "HtmlDivElement", "Element", "DomTokenList" ] }
gloo-net = "0.2.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
wasm-logger = "0.2.0"
log = "0.4.17"
common = { path = "../common" }
